- fixed bug in copying NLPI interfaces that use block-memory (NLPI copy used block memory from source SCIP)
- fixed several issues in flatzinc reader
- fixed bug w.r.t. counting feasible solutions and turned of sparse solution test
- fixed wrong changing of wasdelayed flag for propagators
- fixed bug in cons_countsols.c w.r.t. none active variables

plugins:
- added vbound heuristic (heur_vbounds.{c,h})
- added clique heuristic (heur_clique.{c,h})
- added pseudoboolean constraint handler (cons_pseudoboolean.{c,h})
- all C template files are now called <plugintype>_xyz.{c,h} instead of <plugintype>_xxx.{c,h}
- added first version of cons_disjunction.{c,h} which allows a disjunctions of constraints
- added first version of sepa_closecuts.{c,h} to separate cuts w.r.t. to a point that is closer to the integral polyhedron

parameters:
- added parameter <constraints/quadratic/disaggregate> to split a block-separable quadratic constraint into several quadratic constraint
- added parameter <constraints/indicator/removeIndicators> to remove indicator constraints if corresponding vub has been added
- change default value of parameter "nodeselection/restartdfs/selectbestfreq" 100
- added parameter "nodeselection/restartdfs/countonlyleafs" in node selector restart dfs which can be used to select 
  the counting process of processed nodes 
- added parameter <misc/resetstat> which state if the statistics should be reseted if the transformed problem is freed 
  (in case of a benders decomposition this parameter should be set to FALSE) default value is TRUE
- added parameter <misc/improvingsols> which states whether only solutions which have a better (or equal) primal bound 
  as the best known are checked; this is of interest if the check of a solution is expensive; default value is FALSE
- added parameters <constraints/linear/nmincomparisons> and <constraints/linear/mingainpernmincomparisons> to influence stopping criterium
  for pairwise comparison of linear constraints